--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
   <string name="favorites_desc">Your favorited items.</string>
   <string name="recommendations_title">Recommendations</string>
   <string name="recommendations_desc">Your custom "drinks" playlist.</string>
+  <string name="profile_label">Profile</string>
 
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
